# EditPhoto

./: README.md  TriThoai.txt
CodeTeacher/: CodeTeacher.sln
CodeTeacher/CodeTeacher/: CodeTeacher.vcxproj  CodeTeacher.vcxproj.filters
TeacherCode/: TeacherCode.sln
TeacherCode/PhoenixGithub/: Action.cpp  Action.h  Blur.cpp  Blur.h  Brighten.cpp  Brighten.h  CMakeLists.txt  Dilate.cpp  Dilate.h  Erode.cpp  Erode.h  Makefile  PhoenixGithub.vcxproj  PhoenixGithub.vcxproj.filters  README.md  Resize.cpp  Resize.h  main.cpp
TeacherCode/TeacherCode/: Bitmap.h  Bitmap1.cpp  Bitmap2.cpp  Main.cpp  TeacherCode.vcxproj  TeacherCode.vcxproj.filters  program.cpp
